--- a/environment.yml
+++ b/environment.yml
@@ -1,21 +1,274 @@
 channels:
   - conda-forge
 dependencies:
-  - bokeh=2.4
-  - jupyterlab=3.2
-  - jupyterlab-git
-  - jupyter-server-proxy=3.2
-  - matplotlib=3.5
-  - ipympl
-  - pre-commit
-  - scipy=1.7
-  - panel=0.12
-  - pip
-  - python=3.10
-  - resampy=0.2.2
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - aiohttp=3.8.1=py310h5764c6d_1
+  - aiosignal=1.2.0=pyhd8ed1ab_0
+  - alsa-lib=1.2.6.1=h7f98852_0
+  - anyio=3.6.1=py310hff52083_0
+  - argon2-cffi=21.3.0=pyhd8ed1ab_0
+  - argon2-cffi-bindings=21.2.0=py310h5764c6d_2
+  - asttokens=2.0.5=pyhd8ed1ab_0
+  - async-timeout=4.0.2=pyhd8ed1ab_0
+  - attr=2.5.1=h166bdaf_0
+  - attrs=21.4.0=pyhd8ed1ab_0
+  - babel=2.10.3=pyhd8ed1ab_0
+  - backcall=0.2.0=pyh9f0ad1d_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+  - beautifulsoup4=4.11.1=pyha770c72_0
+  - bleach=5.0.1=pyhd8ed1ab_0
+  - bokeh=2.4.3=py310hff52083_0
+  - brotli=1.0.9=h166bdaf_7
+  - brotli-bin=1.0.9=h166bdaf_7
+  - brotlipy=0.7.0=py310h5764c6d_1004
+  - bzip2=1.0.8=h7f98852_4
+  - ca-certificates=2022.6.15=ha878542_0
+  - certifi=2022.6.15=py310hff52083_0
+  - cffi=1.15.1=py310h255011f_0
+  - cfgv=3.3.1=pyhd8ed1ab_0
+  - charset-normalizer=2.1.0=pyhd8ed1ab_0
+  - colorama=0.4.5=pyhd8ed1ab_0
+  - cryptography=37.0.4=py310h597c629_0
+  - cycler=0.11.0=pyhd8ed1ab_0
+  - dbus=1.13.6=h5008d03_3
+  - debugpy=1.6.0=py310hd8f1fbe_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - distlib=0.3.4=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - executing=0.8.3=pyhd8ed1ab_0
+  - expat=2.4.8=h27087fc_0
+  - fftw=3.3.10=nompi_h77c792f_102
+  - filelock=3.7.1=pyhd8ed1ab_0
+  - flit-core=3.7.1=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.14.0=h8e229c2_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.34.4=py310h5764c6d_0
+  - freetype=2.10.4=h0708190_1
+  - frozenlist=1.3.0=py310h5764c6d_1
+  - gettext=0.19.8.1=h73d1719_1008
+  - giflib=5.2.1=h36c2ea0_2
+  - gitdb=4.0.9=pyhd8ed1ab_0
+  - gitpython=3.1.27=pyhd8ed1ab_0
+  - glib=2.70.2=h780b84a_4
+  - glib-tools=2.70.2=h780b84a_4
+  - gst-plugins-base=1.20.3=hf6a322e_0
+  - gstreamer=1.20.3=hd4edc92_0
+  - icu=70.1=h27087fc_0
+  - identify=2.5.1=pyhd8ed1ab_0
+  - idna=3.3=pyhd8ed1ab_0
+  - importlib-metadata=4.11.4=py310hff52083_0
+  - importlib_metadata=4.11.4=hd8ed1ab_0
+  - importlib_resources=5.8.0=pyhd8ed1ab_0
+  - ipykernel=6.15.1=pyh210e3f2_0
+  - ipympl=0.9.1=pyhd8ed1ab_0
+  - ipython=8.4.0=py310hff52083_0
+  - ipython_genutils=0.2.0=py_1
+  - ipywidgets=7.7.1=pyhd8ed1ab_0
+  - jack=1.9.18=h8c3723f_1002
+  - jedi=0.18.1=py310hff52083_1
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - jpeg=9e=h166bdaf_2
+  - json5=0.9.5=pyh9f0ad1d_0
+  - jsonschema=4.6.2=pyhd8ed1ab_0
+  - jupyter-server-mathjax=0.2.5=pyhc268e32_0
+  - jupyter-server-proxy=3.2.1=pyhd8ed1ab_0
+  - jupyter_client=7.3.4=pyhd8ed1ab_0
+  - jupyter_core=4.10.0=py310hff52083_0
+  - jupyter_server=1.18.1=pyhd8ed1ab_0
+  - jupyterlab=3.4.3=pyhd8ed1ab_0
+  - jupyterlab-git=0.37.1=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
+  - jupyterlab_server=2.15.0=pyhd8ed1ab_0
+  - jupyterlab_widgets=1.1.1=pyhd8ed1ab_0
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.3=py310hbf28c38_0
+  - krb5=1.19.3=h3790be6_0
+  - lcms2=2.12=hddcbb42_0
+  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - lerc=3.0=h9c3ff4c_0
+  - libblas=3.9.0=15_linux64_openblas
+  - libbrotlicommon=1.0.9=h166bdaf_7
+  - libbrotlidec=1.0.9=h166bdaf_7
+  - libbrotlienc=1.0.9=h166bdaf_7
+  - libcap=2.64=ha37c62d_0
+  - libcblas=3.9.0=15_linux64_openblas
+  - libclang=14.0.6=default_h2e3cab8_0
+  - libclang13=14.0.6=default_h3a83d3e_0
+  - libcups=2.3.3=hf5a7f15_1
+  - libdb=6.2.32=h9c3ff4c_0
+  - libdeflate=1.12=h166bdaf_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libevent=2.1.10=h9b69904_4
+  - libffi=3.4.2=h7f98852_5
+  - libflac=1.3.4=h27087fc_0
+  - libgcc-ng=12.1.0=h8d9b700_16
+  - libgfortran-ng=12.1.0=h69a702a_16
+  - libgfortran5=12.1.0=hdcd56e2_16
+  - libglib=2.70.2=h174f98d_4
+  - libgomp=12.1.0=h8d9b700_16
+  - libiconv=1.16=h516909a_0
+  - liblapack=3.9.0=15_linux64_openblas
+  - libllvm11=11.1.0=hf817b99_3
+  - libllvm14=14.0.6=he0ac6c6_0
+  - libnsl=2.0.0=h7f98852_0
+  - libogg=1.3.4=h7f98852_1
+  - libopenblas=0.3.20=pthreads_h78a6416_0
+  - libopus=1.3.1=h7f98852_1
+  - libpng=1.6.37=h753d276_3
+  - libpq=14.4=hd77ab85_0
+  - libsndfile=1.0.31=h9c3ff4c_1
+  - libsodium=1.0.18=h36c2ea0_1
+  - libstdcxx-ng=12.1.0=ha89aaad_16
+  - libtiff=4.4.0=hc85c160_1
+  - libtool=2.4.6=h9c3ff4c_1008
+  - libudev1=249=h166bdaf_4
+  - libuuid=2.32.1=h7f98852_1000
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libwebp=1.2.2=h3452ae3_0
+  - libwebp-base=1.2.2=h7f98852_1
+  - libxcb=1.13=h7f98852_1004
+  - libxkbcommon=1.0.3=he3ba5ed_0
+  - libxml2=2.9.14=h22db469_3
+  - libzlib=1.2.12=h166bdaf_1
+  - llvmlite=0.38.1=py310h58363a5_0
+  - lz4-c=1.9.3=h9c3ff4c_1
+  - markdown=3.3.7=pyhd8ed1ab_0
+  - markupsafe=2.1.1=py310h5764c6d_1
+  - matplotlib=3.5.2=py310hff52083_0
+  - matplotlib-base=3.5.2=py310h5701ce4_0
+  - matplotlib-inline=0.1.3=pyhd8ed1ab_0
+  - mistune=0.8.4=py310h6acc77f_1005
+  - multidict=6.0.2=py310h5764c6d_1
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mysql-common=8.0.29=haf5c9bc_1
+  - mysql-libs=8.0.29=h28c427c_1
+  - nbclassic=0.3.7=pyhd8ed1ab_0
+  - nbclient=0.6.6=pyhd8ed1ab_0
+  - nbconvert=6.5.0=pyhd8ed1ab_0
+  - nbconvert-core=6.5.0=pyhd8ed1ab_0
+  - nbconvert-pandoc=6.5.0=pyhd8ed1ab_0
+  - nbdime=3.1.1=pyhd8ed1ab_0
+  - nbformat=5.4.0=pyhd8ed1ab_0
+  - ncurses=6.3=h27087fc_1
+  - nest-asyncio=1.5.5=pyhd8ed1ab_0
+  - nodeenv=1.7.0=pyhd8ed1ab_0
+  - notebook=6.4.12=pyha770c72_0
+  - notebook-shim=0.1.0=pyhd8ed1ab_0
+  - nspr=4.32=h9c3ff4c_1
+  - nss=3.78=h2350873_0
+  - numba=0.55.2=py310ha5257ce_0
+  - numpy=1.22.4=py310h4ef5377_0
+  - openjpeg=2.4.0=hb52868f_1
+  - openssl=1.1.1q=h166bdaf_0
+  - packaging=21.3=pyhd8ed1ab_0
+  - pandoc=2.18=ha770c72_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - panel=0.13.1=pyhd8ed1ab_0
+  - param=1.12.2=pyh6c4a22f_0
+  - parso=0.8.3=pyhd8ed1ab_0
+  - pcre=8.45=h9c3ff4c_0
+  - pexpect=4.8.0=pyh9f0ad1d_2
+  - pickleshare=0.7.5=py_1003
+  - pillow=9.2.0=py310he619898_0
+  - pip=22.1.2=pyhd8ed1ab_0
+  - platformdirs=2.5.1=pyhd8ed1ab_0
+  - ply=3.11=py_1
+  - portaudio=19.6.0=h57a0ea0_5
+  - pre-commit=2.19.0=py310hff52083_0
+  - prometheus_client=0.14.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.30=pyha770c72_0
+  - psutil=5.9.1=py310h5764c6d_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pulseaudio=14.0=h7f54b18_8
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pycparser=2.21=pyhd8ed1ab_0
+  - pyct=0.4.6=py_0
+  - pyct-core=0.4.6=py_0
+  - pygments=2.12.0=pyhd8ed1ab_0
+  - pyopenssl=22.0.0=pyhd8ed1ab_0/
+  - pyparsing=3.0.9=pyhd8ed1ab_0
+  - pyqt=5.15.7=py310h29803b5_0
+  - pyqt5-sip=12.11.0=py310hd8f1fbe_0
+  - pyrsistent=0.18.1=py310h5764c6d_1
+  - pysocks=1.7.1=py310hff52083_5
+  - python=3.10.5=h582c2e5_0_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.15.3=pyhd8ed1ab_0
+  - python_abi=3.10=2_cp310
+  - pytz=2022.1=pyhd8ed1ab_0
+  - pyviz_comms=2.2.0=pyhd8ed1ab_0
+  - pyyaml=6.0=py310h5764c6d_4
+  - pyzmq=23.2.0=py310h330234f_0
+  - qt-main=5.15.4=ha5833f6_2
+  - readline=8.1.2=h0f457ee_0
+  - requests=2.28.1=pyhd8ed1ab_0
+  - resampy=0.3.1=pyhd8ed1ab_0
+  - scipy=1.8.1=py310h7612f91_0
+  - send2trash=1.8.0=pyhd8ed1ab_0
+  - setuptools=63.1.0=py310hff52083_0
+  - simpervisor=0.4=pyhd8ed1ab_0
+  - sip=6.6.2=py310hd8f1fbe_0
+  - six=1.16.0=pyh6c4a22f_0
+  - smmap=3.0.5=pyh44b312d_0
+  - sniffio=1.2.0=py310hff52083_3
+  - soupsieve=2.3.1=pyhd8ed1ab_0
+  - sqlite=3.39.0=h4ff8645_0
+  - stack_data=0.3.0=pyhd8ed1ab_0
+  - terminado=0.15.0=py310hff52083_0
+  - tinycss2=1.1.1=pyhd8ed1ab_0
+  - tk=8.6.12=h27826a3_0
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tornado=6.2=py310h5764c6d_0
+  - tqdm=4.64.0=pyhd8ed1ab_0
+  - traitlets=5.3.0=pyhd8ed1ab_0
+  - typing-extensions=4.3.0=hd8ed1ab_0
+  - typing_extensions=4.3.0=pyha770c72_0
+  - tzdata=2022a=h191b570_0
+  - ukkonen=1.0.1=py310hbf28c38_2
+  - unicodedata2=14.0.0=py310h5764c6d_1
+  - urllib3=1.26.10=pyhd8ed1ab_0
+  - virtualenv=20.15.1=py310hff52083_0
+  - wcwidth=0.2.5=pyh9f0ad1d_2
+  - webencodings=0.5.1=py_1
+  - websocket-client=1.3.3=pyhd8ed1ab_0
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - widgetsnbextension=3.6.1=pyha770c72_0
+  - xcb-util=0.4.0=h166bdaf_0
+  - xcb-util-image=0.4.0=h166bdaf_0
+  - xcb-util-keysyms=0.4.0=h166bdaf_0
+  - xcb-util-renderutil=0.3.9=h166bdaf_0
+  - xcb-util-wm=0.4.1=h166bdaf_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xz=5.2.5=h516909a_1
+  - yaml=0.2.5=h7f98852_2
+  - yarl=1.7.2=py310h5764c6d_2
+  - zeromq=4.3.4=h9c3ff4c_1
+  - zipp=3.8.0=pyhd8ed1ab_0
+  - zlib=1.2.12=h166bdaf_1
+  - zstd=1.5.2=h8a70e8d_2
   - pip:
-    - git+https://github.com/holoviz/jupyter-panel-proxy@c22a7bdc2a69345b74550cac2b7d9220cb6a13a0
-    - hapiclient==0.2.*
+    - cdflib==0.4.4
+    - cftime==1.6.1
+    - hapiclient==0.2.4
+    - isodate==0.6.1
+    - joblib==1.1.0
+    - jupyter-panel-proxy==0.2.0a2
+    - netcdf4==1.6.0
+    - numexpr==2.8.3
+    - pandas==1.4.3
     - pyrubberband==0.3.0
-    - git+https://github.com/Swarm-DISC/SwarmX@ac89c5c07a8130ce0083171f552ef5f53f6b5956
-    # - numpy==1.21.5
+    - pysoundfile==0.9.0.post1
+    - swarmx==0.1.0a1
+    - tables==3.7.0
+    - viresclient==0.10.3
+    - xarray==2022.3.0
