--- a/environment.yml
+++ b/environment.yml
@@ -194,7 +194,7 @@ dependencies:
   - pyct=0.4.6=py_0
   - pyct-core=0.4.6=py_0
   - pygments=2.12.0=pyhd8ed1ab_0
-  - pyopenssl=22.0.0=pyhd8ed1ab_0/
+  - pyopenssl=22.0.0=pyhd8ed1ab_0
   - pyparsing=3.0.9=pyhd8ed1ab_0
   - pyqt=5.15.7=py310h29803b5_0
   - pyqt5-sip=12.11.0=py310hd8f1fbe_0
